[gd_scene load_steps=5 format=2]

[ext_resource path="res://Music/Screen/level_selection.mp3" type="AudioStream" id=1]
[ext_resource path="res://UI/Fonts/Charybdis.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Screens/LevelSelect.gd" type="Script" id=3]
[ext_resource path="res://Scenery/Backgrounds/SpaceBackground/Background_space.png" type="Texture" id=4]

[node name="LevelSelectScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 313, 185 )
scale = Vector2( 0.7, 0.7 )
z_index = -5
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_right = 540.0
margin_bottom = 40.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 440.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "SELECT_STAGE"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 440.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100

[node name="Planet1Container" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 170.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PlanetName" type="Label" parent="VBoxContainer/HBoxContainer/Planet1Container"]
margin_right = 170.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 1104, 602 )
custom_fonts/font = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/Planet1Container"]
margin_top = 21.0
margin_right = 170.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Planet1Container"]
margin_top = 125.0
margin_right = 170.0
margin_bottom = 142.0

[node name="Type" type="Label" parent="VBoxContainer/HBoxContainer/Planet1Container/HBoxContainer"]
margin_right = 28.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( -362, 109 )
custom_fonts/font = ExtResource( 2 )
text = "TYPE"

[node name="TypeName" type="Label" parent="VBoxContainer/HBoxContainer/Planet1Container/HBoxContainer"]
margin_left = 32.0
margin_right = 32.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Planet1Container"]
margin_top = 146.0
margin_right = 170.0
margin_bottom = 163.0

[node name="Diff" type="Label" parent="VBoxContainer/HBoxContainer/Planet1Container/HBoxContainer2"]
margin_right = 42.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "THREAT"

[node name="DiffVal" type="Label" parent="VBoxContainer/HBoxContainer/Planet1Container/HBoxContainer2"]
margin_left = 46.0
margin_right = 46.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )

[node name="Planet1Button" type="Button" parent="VBoxContainer/HBoxContainer/Planet1Container"]
margin_top = 167.0
margin_right = 170.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 2 )
text = "SELECT"

[node name="Planet2Container" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 270.0
margin_right = 440.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlanetName" type="Label" parent="VBoxContainer/HBoxContainer/Planet2Container"]
margin_right = 170.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/Planet2Container"]
margin_top = 21.0
margin_right = 170.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Planet2Container"]
margin_top = 125.0
margin_right = 170.0
margin_bottom = 142.0

[node name="Type" type="Label" parent="VBoxContainer/HBoxContainer/Planet2Container/HBoxContainer"]
margin_right = 28.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "TYPE"

[node name="TypeName" type="Label" parent="VBoxContainer/HBoxContainer/Planet2Container/HBoxContainer"]
margin_left = 32.0
margin_right = 32.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Planet2Container"]
margin_top = 146.0
margin_right = 170.0
margin_bottom = 163.0

[node name="Diff" type="Label" parent="VBoxContainer/HBoxContainer/Planet2Container/HBoxContainer2"]
margin_right = 42.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "THREAT"

[node name="DiffVal" type="Label" parent="VBoxContainer/HBoxContainer/Planet2Container/HBoxContainer2"]
margin_left = 46.0
margin_right = 46.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )

[node name="Planet2Button" type="Button" parent="VBoxContainer/HBoxContainer/Planet2Container"]
margin_top = 167.0
margin_right = 170.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 2 )
text = "SELECT"

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Planet1Container/Planet1Button" to="." method="_on_Planet1Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Planet2Container/Planet2Button" to="." method="_on_Planet2Button_pressed"]
